# aoc_2022

./: .gitignore  README.md  cli.py  pyproject.toml
aoc_2022/: cli.py  env.py  toolkit.py  utils.py
aoc_2022/day01/: __main__.py  core.py  data.txt
aoc_2022/day02/: core.py  data.txt
aoc_2022/day03/: core.py  data.txt
aoc_2022/day04/: core.py  data.txt
aoc_2022/day05/: core.py  data.txt
aoc_2022/day06/: core.py  data.txt
aoc_2022/day07/: core.py  data.txt  puzzle.md
aoc_2022/day08/: core.py  data.txt  puzzle.md
assets/: demo.webm
templates/: core.py.j2  test.py.j2
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py
