[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["John Landeholt <johnlan@kth.se>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.2.3"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
requests = "^2.28.1"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc = "aoc_2022.cli:cli"
